# micromissiles

./: .bazelrc  .gitignore  .pre-commit-config.yaml  README.md  WORKSPACE  WORKSPACE.bazel
antenna/: BUILD.bazel  ti_radar_3d_radiation_pattern_main.py  ti_radar_azimuth_radiation_pattern_main.py  ti_radar_elevation_radiation_pattern_main.py
antenna/data/: BUILD.bazel  ti_iwr6843aopevm_3d_radiation_pattern_data_1.csv  ti_iwr6843aopevm_azimuth_radiation_pattern_data_1.csv  ti_iwr6843aopevm_azimuth_radiation_pattern_data_2.csv  ti_iwr6843aopevm_elevation_radiation_pattern_data_1.csv  ti_iwr6843aopevm_elevation_radiation_pattern_data_2.csv  ti_iwr6843aopevm_elevation_radiation_pattern_data_3.csv  ti_iwr6843aopevm_elevation_radiation_pattern_data_4.csv
base/: BUILD.bazel  base.h  commandlineflags.cc  commandlineflags.h  logging.cc  logging.h
experimental/: BUILD.bazel  boost_odeint_example_main.cc  eigen_example_main.cc  matplot_example_main.cc  opencv_3d_animation_example_main.cc  opencv_gui_example_main.cc
radar/ti/: BUILD.bazel  ti_radar_azimuth_elevation_map_plotter.py  ti_radar_azimuth_elevation_map_plotter_main.py  ti_radar_config.py  ti_radar_data_handler.py  ti_radar_data_logger.py  ti_radar_data_logger_main.py  ti_radar_interface.py  ti_radar_interface_main.py  ti_radar_logger.py  ti_radar_range_doppler_map_plotter.py  ti_radar_range_doppler_map_plotter_main.py  ti_radar_subframe_data.py  ti_radar_subframe_data_aggregator.py  ti_radar_subframe_data_handler.py  ti_radar_subframe_data_logger.py  ti_radar_subframe_data_logger_main.py  ti_radar_subframe_data_parser.py
simulation/antenna/: BUILD.bazel  antenna.py  antenna_array.py  antenna_array_1d_spectrum.py  antenna_array_1d_spectrum_main.py  antenna_array_main.py  antenna_array_spectrum.py  antenna_array_test.py  antenna_single_reflection_path_main.py  dipole_antenna.py  dipole_antenna_main.py  horn_antenna.py  horn_antenna_main.py  isotropic_antenna.py  linear_antenna_array_spectrum.py  linear_antenna_array_spectrum_main.py  patch_antenna.py  patch_antenna_design_main.py  patch_antenna_main.py
simulation/estimator/: BUILD.bazel  complex_exponential.py  complex_exponential_estimator.py  complex_exponential_test.py  estimator.py  fft_frequency_estimator_main.py  fft_frequency_estimator_test.py  frequency_estimator.py  real_exponential.py  real_exponential_estimator.py  real_exponential_test.py  sinusoid.py  sinusoid_test.py
simulation/estimator/exponential/: BUILD.bazel  exponential_regression_decaying_exponential_estimator.py  exponential_regression_decaying_exponential_estimator_test.py  linear_regression_decaying_exponential_estimator.py  linear_regression_decaying_exponential_estimator_test.py  regression_decaying_exponential_estimator.py  regression_decaying_exponential_estimator_main.py  regression_decaying_exponential_estimator_with_offset_main.py  weighted_linear_regression_decaying_exponential_estimator.py  weighted_linear_regression_decaying_exponential_estimator_test.py
simulation/estimator/fft/: BUILD.bazel  fft_frequency_estimator.py  fft_frequency_estimator_main.py  fft_frequency_estimator_test.py
simulation/estimator/prony/: BUILD.bazel  prony_complex_exponential_estimator.py  prony_complex_exponential_estimator_main.py  prony_mpm_complex_exponential_estimator.py  prony_mpm_complex_exponential_estimator_test.py  prony_polynomial_complex_exponential_estimator.py  prony_polynomial_complex_exponential_estimator_test.py
simulation/noise/: BUILD.bazel  phase_noise.py  radar_if_noise_main.py  radar_if_phase_noise_main.py
simulation/radar/components/: BUILD.bazel  adc_data.py  adc_data_test.py  azimuth_elevation_map.py  chirp.py  chirp_mixing_main.py  chirp_processing_main.py  chirp_range_resolution_main.py  chirp_test.py  chirp_waveform_main.py  coordinates.py  coordinates_test.py  noise.py  peak_selector.py  peak_selector_test.py  radar.py  range_doppler_map.py  samples.py  samples_test.py  spatial_samples.py  target.py  target_snr_vs_range_main.py
simulation/radar/doa/: BUILD.bazel  doa_array_extension_estimator.py  doa_array_extension_estimator_main.py  doa_estimator.py  doa_fft_estimator.py  doa_fft_estimator_main.py  doa_music_estimator.py  doa_music_estimator_main.py  doa_music_estimator_snapshot_main.py
simulation/radar/processors/: BUILD.bazel  chirp_matched_filter_processor_main.py  chirp_processor.py  chirp_processor_test.py  chirp_range_resolution_main.py  chirp_sparse_processor_main.py  fft_processor.py  matched_filter_processor.py  range_doppler_processor.py  range_doppler_processor_main.py  range_doppler_processor_test.py  range_fft_phased_array_main.py  signal_processor.py  (+1 more)
simulation/swarm/: BUILD.bazel  agent.cc  agent.h  agent.py  agent_test.py  constants.cc  constants.h  constants.py  constants_test.cc  missile.py  model_agent.h  model_agent_test.cc  plotter.py  sensor.py  sensor_test.py  simulator.cc  simulator.h  simulator.py  simulator_main.cc  simulator_main.py  state_history.cc  state_history.h  state_history_test.cc  swarm_simulator.cc  swarm_simulator.h  swarm_simulator.py  swarm_simulator_main.cc  swarm_simulator_main.py  target.py  target_assignment.py  target_assignment_test.py  utils.cc  utils.h  utils_test.cc
simulation/visualization/: BUILD  BUILD.bazel  direction_of_arrival_main.py  phased_array_main.py  range_doppler_main.py  snr_vs_range_main.py
utils/: BUILD.bazel  constants.py  protobuf.h  protobuf_test.cc  random.cc  random.h  struct.py  thread_pool.cc  thread_pool.h  thread_pool_test.cc
utils/optimization/: BUILD.bazel  linear_model.py  linear_model_test.py
utils/regression/: BUILD.bazel  exponential_regression.py  exponential_regression_test.py  linear_regression.py  linear_regression_test.py  logarithmic_regression.py  logarithmic_regression_test.py  parabolic_regression_test.py  polynomial_regression.py
utils/serial/: serial_interface.py  serial_logger.py  serial_logger_main.py  serial_monitor.py  serial_monitor_main.py
utils/solver/: BUILD.bazel  least_squares_solver.py  least_squares_solver_test.py  solver.py  solver_test.py
(+284 files in other folders)
