workspace(name = "micromissiles")

# Load third-party workspaces.
load("//third_party:workspace.bzl", "load_third_party_workspaces")

load_third_party_workspaces()

# Load non-Bazel build system dependencies.
load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

# Load Python repositories.
load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

# Register the Python toolchain.
load("//tools:python.bzl", "register_python_toolchain")

register_python_toolchain()

# Parse pip requirements.
load("//deps:pip_requirements.bzl", "parse_pip_requirements")

parse_pip_requirements()

# Load pip dependencies.
load("//deps:pip_deps.bzl", "load_pip_dependencies")

load_pip_dependencies()

# Load Protobuf dependencies and toolchains.
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies")

rules_proto_dependencies()

load("@rules_proto//proto:setup.bzl", "rules_proto_setup")

rules_proto_setup()

load("@rules_proto//proto:toolchains.bzl", "rules_proto_toolchains")

rules_proto_toolchains()
