load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "ti_radar_azimuth_radiation_pattern_main",
    srcs = ["ti_radar_azimuth_radiation_pattern_main.py"],
    data = ["//antenna/data:ti_radar_azimuth_radiation_pattern_data"],
    deps = [
        "//utils:constants",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "ti_radar_elevation_radiation_pattern_main",
    srcs = ["ti_radar_elevation_radiation_pattern_main.py"],
    data = ["//antenna/data:ti_radar_elevation_radiation_pattern_data"],
    deps = [
        "//utils:constants",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "ti_radar_3d_radiation_pattern_main",
    srcs = ["ti_radar_3d_radiation_pattern_main.py"],
    data = ["//antenna/data:ti_radar_3d_radiation_pattern_data"],
    deps = [
        "//utils:constants",
        "//utils/visualization:color_maps",
        requirement("absl-py"),
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("SciencePlots"),
    ],
)
