package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "boost_odeint_example_main",
    srcs = ["boost_odeint_example_main.cc"],
    deps = [
        "//base",
        "@boost",
        "@eigen",
    ],
)

cc_binary(
    name = "eigen_example_main",
    srcs = ["eigen_example_main.cc"],
    deps = [
        "//base",
        "@eigen",
    ],
)

cc_binary(
    name = "matplot_example_main",
    srcs = ["matplot_example_main.cc"],
    deps = [
        "//base",
        "@matplot",
    ],
)
