load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    deps = [requirement("numpy")],
)

py_library(
    name = "struct",
    srcs = ["struct.py"],
)

py_test(
    name = "struct_test",
    srcs = ["struct_test.py"],
    deps = [
        ":struct",
        requirement("absl-py"),
    ],
)
