load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    deps = [requirement("numpy")],
)

py_library(
    name = "struct",
    srcs = ["struct.py"],
)

py_test(
    name = "struct_test",
    srcs = ["struct_test.py"],
    deps = [
        ":struct",
        requirement("absl-py"),
    ],
)

cc_library(
    name = "thread_pool",
    srcs = ["thread_pool.cc"],
    hdrs = ["thread_pool.h"],
)

cc_test(
    name = "thread_pool_test",
    srcs = ["thread_pool_test.cc"],
    deps = [
        ":thread_pool",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
