load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    deps = [requirement("numpy")],
)

cc_library(
    name = "protobuf",
    hdrs = ["protobuf.h"],
    deps = [
        "@abseil-cpp//absl/strings:str_format",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "protobuf_test",
    srcs = ["protobuf_test.cc"],
    data = ["//simulation/swarm/configs/missile:configs"],
    deps = [
        ":protobuf",
        "//simulation/swarm/proto:static_config_cc_proto",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "random",
    srcs = ["random.cc"],
    hdrs = ["random.h"],
)

py_library(
    name = "struct",
    srcs = ["struct.py"],
)

py_test(
    name = "struct_test",
    srcs = ["struct_test.py"],
    deps = [
        ":struct",
        requirement("absl-py"),
    ],
)

cc_library(
    name = "thread_pool",
    srcs = ["thread_pool.cc"],
    hdrs = ["thread_pool.h"],
)

cc_test(
    name = "thread_pool_test",
    srcs = ["thread_pool_test.cc"],
    deps = [
        ":thread_pool",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
