package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ti_radar_elevation_radiation_pattern_data",
    srcs = glob(["ti_*_elevation_radiation_pattern_data_*.csv"]),
)

filegroup(
    name = "ti_radar_azimuth_radiation_pattern_data",
    srcs = glob(["ti_*_azimuth_radiation_pattern_data_*.csv"]),
)

filegroup(
    name = "ti_radar_3d_radiation_pattern_data",
    srcs = glob(["ti_*_3d_radiation_pattern_data_*.csv"]),
)
