load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "ti_radar_config",
    srcs = ["ti_radar_config.py"],
)

py_library(
    name = "ti_radar_data_handler",
    srcs = ["ti_radar_data_handler.py"],
)

py_library(
    name = "ti_radar_interface",
    srcs = ["ti_radar_interface.py"],
    deps = [
        ":ti_radar_config",
        ":ti_radar_data_handler",
        "//utils/serial:serial_interface",
        requirement("absl-py"),
    ],
)

py_binary(
    name = "ti_radar_interface_main",
    srcs = ["ti_radar_interface_main.py"],
    deps = [
        ":ti_radar_config",
        ":ti_radar_interface",
        ":ti_radar_logger",
        requirement("absl-py"),
    ],
)

py_library(
    name = "ti_radar_logger",
    srcs = ["ti_radar_logger.py"],
    deps = [
        ":ti_radar_data_handler",
        requirement("absl-py"),
    ],
)
