load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "ti_radar_config",
    srcs = ["ti_radar_config.py"],
)

py_library(
    name = "ti_radar_data_handler",
    srcs = ["ti_radar_data_handler.py"],
)

py_library(
    name = "ti_radar_interface",
    srcs = ["ti_radar_interface.py"],
    deps = [
        ":ti_radar_config",
        ":ti_radar_data_handler",
        "//utils/serial:serial_interface",
        requirement("absl-py"),
    ],
)

py_library(
    name = "ti_radar_data_logger",
    srcs = ["ti_radar_data_logger.py"],
    deps = [
        ":ti_radar_data_handler",
        requirement("absl-py"),
    ],
)

py_binary(
    name = "ti_radar_data_logger_main",
    srcs = ["ti_radar_data_logger_main.py"],
    deps = [
        ":ti_radar_config",
        ":ti_radar_data_logger",
        ":ti_radar_interface",
        requirement("absl-py"),
    ],
)

py_library(
    name = "ti_radar_range_doppler_map_plotter",
    srcs = ["ti_radar_range_doppler_map_plotter.py"],
    deps = [
        ":ti_radar_subframe_data",
        ":ti_radar_subframe_data_handler",
        "//utils/visualization:color_maps",
        requirement("matplotlib"),
        requirement("numpy"),
        requirement("SciencePlots"),
    ],
)

py_binary(
    name = "ti_radar_range_doppler_map_plotter_main",
    srcs = ["ti_radar_range_doppler_map_plotter_main.py"],
    deps = [
        ":ti_radar_config",
        ":ti_radar_data_logger",
        ":ti_radar_interface",
        ":ti_radar_range_doppler_map_plotter",
        ":ti_radar_subframe_data_aggregator",
        ":ti_radar_subframe_data_logger",
        requirement("absl-py"),
    ],
)

py_library(
    name = "ti_radar_subframe_data",
    srcs = ["ti_radar_subframe_data.py"],
    deps = ["//utils:struct"],
)

py_library(
    name = "ti_radar_subframe_data_aggregator",
    srcs = ["ti_radar_subframe_data_aggregator.py"],
    deps = [
        ":ti_radar_data_handler",
        ":ti_radar_subframe_data",
        ":ti_radar_subframe_data_handler",
        ":ti_radar_subframe_data_parser",
        requirement("absl-py"),
    ],
)

py_library(
    name = "ti_radar_subframe_data_handler",
    srcs = ["ti_radar_subframe_data_handler.py"],
    deps = [":ti_radar_subframe_data"],
)

py_library(
    name = "ti_radar_subframe_data_logger",
    srcs = ["ti_radar_subframe_data_logger.py"],
    deps = [
        ":ti_radar_subframe_data",
        ":ti_radar_subframe_data_handler",
        requirement("absl-py"),
    ],
)

py_binary(
    name = "ti_radar_subframe_data_logger_main",
    srcs = ["ti_radar_subframe_data_logger_main.py"],
    deps = [
        ":ti_radar_config",
        ":ti_radar_data_logger",
        ":ti_radar_interface",
        ":ti_radar_subframe_data_aggregator",
        ":ti_radar_subframe_data_logger",
        requirement("absl-py"),
    ],
)

py_library(
    name = "ti_radar_subframe_data_parser",
    srcs = ["ti_radar_subframe_data_parser.py"],
    deps = [
        ":ti_radar_subframe_data",
        requirement("absl-py"),
    ],
)
