load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "frequency_estimator",
    srcs = ["frequency_estimator.py"],
    deps = [
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "sinusoid",
    srcs = ["sinusoid.py"],
    deps = [
        "//simulation/radar/components:noise",
        "//simulation/radar/components:samples",
        "//utils:constants",
        requirement("numpy"),
    ],
)

py_test(
    name = "sinusoid_test",
    srcs = ["sinusoid_test.py"],
    deps = [
        ":sinusoid",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)
