load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "complex_exponential",
    srcs = ["complex_exponential.py"],
    deps = [
        "//simulation/radar/components:noise",
        "//simulation/radar/components:samples",
        "//utils:constants",
        requirement("numpy"),
    ],
)

py_test(
    name = "complex_exponential_test",
    srcs = ["complex_exponential_test.py"],
    deps = [
        ":complex_exponential",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "estimator",
    srcs = ["estimator.py"],
    deps = [
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "complex_exponential_estimator",
    srcs = ["complex_exponential_estimator.py"],
    deps = [
        ":complex_exponential",
        ":estimator",
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)

py_library(
    name = "frequency_estimator",
    srcs = ["frequency_estimator.py"],
    deps = [
        ":estimator",
        "//simulation/radar/components:samples",
        requirement("numpy"),
    ],
)
