package(default_visibility = ["//visibility:public"])

cc_library(
    name = "agent",
    srcs = ["agent.cc"],
    hdrs = ["agent.h"],
    deps = [
        ":constants",
        ":state_history",
        "//simulation/swarm/proto:agent_cc_proto",
        "//simulation/swarm/proto:dynamic_config_cc_proto",
        "//simulation/swarm/proto:missile_config_cc_proto",
        "//simulation/swarm/proto:plotting_config_cc_proto",
        "//simulation/swarm/proto:state_cc_proto",
        "//simulation/swarm/proto:static_config_cc_proto",
        "//simulation/swarm/proto:target_config_cc_proto",
        "@abseil-cpp//absl/strings:str_format",
        "@boost",
        "@eigen",
    ],
)

cc_library(
    name = "constants",
    srcs = ["constants.cc"],
    hdrs = ["constants.h"],
)

cc_test(
    name = "constants_test",
    srcs = ["constants_test.cc"],
    deps = [
        ":constants",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "model_agent",
    hdrs = ["model_agent.h"],
    deps = [
        ":agent",
        "//simulation/swarm/proto:state_cc_proto",
        "//simulation/swarm/proto:static_config_cc_proto",
    ],
)

cc_test(
    name = "model_agent_test",
    srcs = ["model_agent_test.cc"],
    deps = [
        ":model_agent",
        "//simulation/swarm/proto:missile_config_cc_proto",
        "//simulation/swarm/proto:state_cc_proto",
        "@eigen",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "state_history",
    srcs = ["state_history.cc"],
    hdrs = ["state_history.h"],
    deps = ["//simulation/swarm/proto:state_cc_proto"],
)

cc_test(
    name = "state_history_test",
    srcs = ["state_history_test.cc"],
    deps = [
        ":state_history",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
