load("@pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "exponential_regression",
    srcs = ["exponential_regression.py"],
    deps = [
        ":regression",
        requirement("absl-py"),
        requirement("numpy"),
        requirement("scipy"),
    ],
)

py_test(
    name = "exponential_regression_test",
    srcs = ["exponential_regression_test.py"],
    deps = [
        ":exponential_regression",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "linear_regression",
    srcs = ["linear_regression.py"],
    deps = [
        ":polynomial_regression",
        requirement("numpy"),
    ],
)

py_test(
    name = "linear_regression_test",
    srcs = ["linear_regression_test.py"],
    deps = [
        ":linear_regression",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "logarithmic_regression",
    srcs = ["logarithmic_regression.py"],
    deps = [
        ":regression",
        requirement("absl-py"),
        requirement("numpy"),
        requirement("scipy"),
    ],
)

py_test(
    name = "logarithmic_regression_test",
    srcs = ["logarithmic_regression_test.py"],
    deps = [
        ":logarithmic_regression",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "parabolic_regression",
    srcs = ["parabolic_regression.py"],
    deps = [
        ":polynomial_regression",
        requirement("numpy"),
    ],
)

py_test(
    name = "parabolic_regression_test",
    srcs = ["parabolic_regression_test.py"],
    deps = [
        ":parabolic_regression",
        requirement("absl-py"),
        requirement("numpy"),
    ],
)

py_library(
    name = "polynomial_regression",
    srcs = ["polynomial_regression.py"],
    deps = [
        ":regression",
        requirement("numpy"),
    ],
)

py_library(
    name = "regression",
    srcs = ["regression.py"],
    deps = [requirement("numpy")],
)
